node/shell.log
Compilation failed due to following error(s).
main.c: In function ‘main’:
main.c:13:1: error: ‘gdb_log’ undeclared (first use in this function)
   12 | Seahorse Seahell Shell ERR_DOS MESSAGE 167IGMA .
   13 | gdb_log.$PID
      | ^~~~~~~
main.c:13:1: note: each undeclared identifier is reported only once for each function it appears in
main.c:13:13: error: expected ‘;’ before ‘r|eturn’
   13 | gdb_log.$PID
      |             ^
      |             ;
   14 | 
   15 |     return 0;
      |     ~~~~~~   

Call Stack
#	Function	File:Line
Local Variables
Variable	Value
Registers
Register	Value
Display Expressions
Expression	Value	
Breakpoints and Watchpoints
Seahorse Seahell Shell
	#	Description	

1s
Post job cleanup.
/usr/bin/git version
git version 2.53.0
Temporarily overriding HOME='/home/runner/work/_temp/292d5cc3-8f24-43aa-a231-c332cbf635ba' before making global git config changes
Adding repository directory to the temporary git global config as a safe directory
/usr/bin/git config --global --add safe.directory /home/runner/work/battletoads/battletoads
/usr/bin/git config --local --name-only --get-regexp core\.sshCommand
/usr/bin/git submodule foreach --recursive sh -c "git config --local --name-only --get-regexp 'core\.sshCommand' && git config --local --unset-all 'core.sshCommand' || :"
/usr/bin/git config --local --name-only --get-regexp http\.https\:\/\/github\.com\/\.extraheader
http.https://github.com/.extraheader
/usr/bin/git config --local --unset-all http.https://github.com/.extraheader
/usr/bin/git submodule foreach --recursive sh -c "git config --local --name-only --get-regexp 'http\.https\:\/\/github\.com\/\.extraheader' && git config --local --unset-all 'http.https://github.com/.extraheader' || :"
/usr/bin/git config --local --name-only --get-regexp ^includeIf\.gitdir:
/usr/bin/git submodule foreach --recursive git config --local --show-origin --name-only --get-regexp remote.origin.url
